PerformanceNavigationTiming Response Start unavailable when using Service Worker Cache https://bugs.webkit.org/show_bug.cgi?id=237317

Patch by Alex Christensen <achristensen@webkit.org> on 2022-03-17
Reviewed by Youenn Fablet.

Source/WebCore:

* Modules/cache/DOMCache.cpp:
(WebCore::createResponse):
* page/PerformanceNavigationTiming.cpp:
(WebCore::PerformanceNavigationTiming::navigationFinished):
* platform/network/NetworkLoadMetrics.cpp:
(WebCore::NetworkLoadMetrics::updateFrom):
(WebCore::NetworkLoadMetrics::NetworkLoadMetrics): Deleted.
* platform/network/NetworkLoadMetrics.h:

LayoutTests:

Test that these values are reasonable after loading the main resource from a service worker's cache.

* http/wpt/service-workers/navigation-timing.https-expected.txt: Added.
* http/wpt/service-workers/navigation-timing.https.html: Added.
* http/wpt/service-workers/navigation-timing.js: Added.
(event.event.waitUntil.caches.open.string_appeared_here.then):
(event.event.respondWith.caches.open.string_appeared_here.then):
* http/wpt/service-workers/resources/navigation-timing-part-2.html: Added.


Canonical link: https://commits.webkit.org/248565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291441 268f45cc-cd09-0410-ab3c-d52691b4dbfc