Source/WebCore/platform/network/NetworkLoadMetrics.cpp
@@ -30,15 +30,48 @@
 
 namespace WebCore {
 
-NetworkLoadMetrics::NetworkLoadMetrics()
-    : complete(false)
-    , cellular(false)
-    , expensive(false)
-    , constrained(false)
-    , multipath(false)
-    , isReusedConnection(false)
-    , failsTAOCheck(false)
-    , hasCrossOriginRedirect(false) { }
+NetworkLoadMetrics::NetworkLoadMetrics() = default;
+
+void NetworkLoadMetrics::updateFromFinalMetrics(const NetworkLoadMetrics& other)
+{
+    MonotonicTime originalRedirectStart = redirectStart;
+    MonotonicTime originalFetchStart = fetchStart;
+    MonotonicTime originalDomainLookupStart = domainLookupStart;
+    MonotonicTime originalDomainLookupEnd = domainLookupEnd;
+    MonotonicTime originalConnectStart = connectStart;
+    MonotonicTime originalSecureConnectionStart = secureConnectionStart;
+    MonotonicTime originalConnectEnd = connectEnd;
+    MonotonicTime originalRequestStart = requestStart;
+    MonotonicTime originalResponseStart = responseStart;
+    MonotonicTime originalResponseEnd = responseEnd;
+
+    *this = other;
+
+    if (!redirectStart)
+        redirectStart = originalRedirectStart;
+    if (!fetchStart)
+        fetchStart = originalFetchStart;
+    if (!domainLookupStart)
+        domainLookupStart = originalDomainLookupStart;
+    if (!domainLookupEnd)
+        domainLookupEnd = originalDomainLookupEnd;
+    if (!connectStart)
+        connectStart = originalConnectStart;
+    if (!secureConnectionStart)
+        secureConnectionStart = originalSecureConnectionStart;
+    if (!connectEnd)
+        connectEnd = originalConnectEnd;
+    if (!requestStart)
+        requestStart = originalRequestStart;
+    if (!responseStart)
+        responseStart = originalResponseStart;
+    if (!responseEnd)
+        responseEnd = originalResponseEnd;
+
+    if (!responseEnd)
+        responseEnd = MonotonicTime::now();
+    complete = true;
+}
 
 const NetworkLoadMetrics& NetworkLoadMetrics::emptyMetrics()
 {
